fix kit button mobile

--- a/web/app/themes/Foody/resources/sass/pages/course/new-course.scss
+++ b/web/app/themes/Foody/resources/sass/pages/course/new-course.scss
@@ -1219,6 +1219,9 @@
               margin-top: 8px;
             }
           }
+          > .course-v2-purchase-button {
+            right: 0;
+          }
 
           .buy-kit-purchase-image-container {
             display: flex;
